
Version 0.118.036
	Fixed mixer issue in 117.036
	fixed 1wire issue in 117.036

Version 0.119.036
	Filled in 1wire logic.

Version 0.120.036
	Code cleanup.
	Change PID logging scale.

Version 0.121.037
	Implement abillity to adjust motor outputs.
	Start work on Mixer Wizard.
	Resolved 1wire config issue.

Version 0.122.037:
	Change 1wire startup power variable.

Version 0.123.037:
	Fixed issue with witchcraft.
	Fixed issue with dlflsize reporting incorrect size.

Version 0.124.037:
	Changed pidsrs2k. Mix of default PIDs and Ehitaja's filtering settings.

Version 0.125.037:
	Changed pidspg. Mix of PG PIDs and Ehitaja's filtering settings.

Version 0.126.037:
	Code cleanup.
	Added LEDs back in.
	Added Buzzers back in.

Version 0.127.002:
	Custom version for XDC Racers.
	Added LED set command selections. RGB colors and number of LEDs.
		set led_red=0-255
		set led_green=0-255
		set led_blue=0-255
		set led_count=0-32

Version 0.128.039:
	Code cleanup.
	Changed MS signal output and calibration routine.
	Must recalibrate your ESCs on this build.
	Changed filtering up.

Version 0.129.039:
	Major flight code fix. Highly recommended ended upgrade.
	Updated pidsrs2k

Version 0.130.039:
	Quick fix to remove debug variable.

Version 0.131.039:
	Updated pidsrs2k.
	Updated pidstaja.
	Updated pidsabba.
	Added confirmation and autosave to pid commands.
	Fixed full fflash causing flash not to recognise.
	
Version 0.132.039:
	Updated pidsrs2k.
	updated pidsdefault.
	Added arming buzzer mode.
	Added failsafe buzzer mode.

Version 0.133.039:
	Decrease failsafe sensitivity.

Version 0.134.039:
	Decrease failsafe sensitivity.
	Change Kp limits.
	Updated pidsrs2k.
	Updated pidstaja.
	Updated pidsdefaults.
	Updated pidsxdc.
	Added pidsnoise for noisier setups.
	
Version 0.135.039:
	Fix flash detection function.

Version 0.136.039:
	Arming changed to Double Single.
	Gyro only calibrates on first switch.
	Updated pidsrs2k.

Version 0.137.039: