@@ -249,3 +249,5 @@ Version 0.136.039:
 	Updated pidsrs2k.
 
 Version 0.137.039:
+	Change stick calibration method.
+	
